# linkpad

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/runtime/: kernel.rs  mod.rs  startup.rs  system_proxy.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs  macos.rs  unsupported.rs  windows.rs
crates/startup/: Cargo.toml
crates/startup/src/: lib.rs  macos.rs  unsupported.rs  windows.rs
linkpad/: Cargo.toml
linkpad/src/: app.rs  i18n.rs  lib.rs  main.rs  profile_store.rs  settings_store.rs  state.rs  tray.rs
linkpad/src/i18n/: en.rs  mod.rs  zh.rs
linkpad/src/store/: mod.rs  profile_store.rs  settings_store.rs
linkpad/src/ui/: dashboard.rs  header.rs  mod.rs  sidebar.rs  style.rs
linkpad/src/views/: profiles.rs  proxy_groups.rs  rules.rs  settings.rs
scripts/: prepare-bundled-mihomo.sh
