[workspace]
members = [
    "linkpad",
    "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyrese Luo <tyreseluo@outlook.com>"]


[workspace.dependencies]
linkpad-core       = { path = "crates/core" }
makepad-components = { git = "https://github.com/Project-Robius-China/makepad-component.git", branch = "main" }
makepad-shell      = { git = "https://github.com/Project-Robius-China/makepad-shell.git", branch = "main" }
dirs               = "6.0.0"
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.149"
serde_yaml         = "0.9.34"
url                = "2.5.4"
base64             = "0.22.1"
percent-encoding   = "2.3.2"
chrono             = "0.4.42"
flate2             = "1.1.5"
sha2               = "0.10.9"
reqwest            = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
