[package]
name        = "linkpad"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[dependencies]
linkpad-core       = { workspace = true }
makepad-components = { workspace = true, features = ["Button", "Layout", "Card", "Dropdown", "Input", "Switch"] }
makepad-shell      = { workspace = true }
dirs               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
