[package]
name = "linkpad-core"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Core logic for Linkpad proxy client"

[dependencies]
linkpad-proxy      = { workspace = true }
linkpad-startup    = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_yaml         = { workspace = true }
serde_json         = { workspace = true }
url                = { workspace = true }
base64             = { workspace = true }
percent-encoding   = { workspace = true }
chrono             = { workspace = true }
robius-directories = { workspace = true }
flate2             = { workspace = true }
sha2               = { workspace = true }
tracing            = { workspace = true }
